--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "Gabriel Martins",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
