--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rimraf ./build && tsc",
     "start": "rimraf ./build && tsc node build/index.js "
   },
@@ -14,6 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
