adding typeorm and tsconfig configured for it

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.2",
+    "typeorm": "^0.3.11"
   }
 }
